tokenomics text wrap fix

--- a/src/style.css
+++ b/src/style.css
@@ -244,13 +244,22 @@ button:focus {
   }
 }
 
+/* .tokens {
+  font-size: 2.2rem !important;
+  white-space: nowrap;
+} */
+
 .tokens {
-  font-size: 2.2rem !important
+  font-size: 70px;
+  /* color: #7E7E7E; */
+  color: black;
+  white-space: nowrap;
+  padding-left: 50px !important;
 }
 
 @media (max-width: 767px) {
   .tokens {
-    font-size: 14px !important; /* Example of a scaled-down size for mobile */
+    font-size: 55px !important; /* Example of a scaled-down size for mobile */
     white-space: normal !important
   }
 }
